@@ -213,6 +213,7 @@ void php_embed_shutdown(TSRMLS_D)
 {
 	php_request_shutdown((void *) 0);
 	php_module_shutdown(TSRMLS_C);
+	sapi_shutdown();
 #ifdef ZTS
     tsrm_shutdown();
 #endif
